# serializer version: 1
# name: test_mahal_class
  tuple(
    '[3 3 1 2 3 1 3 3 2 3 1]',
    '''
      [1.75667518e+00 9.53244312e-01 8.38840249e-01 1.61368041e+00
       3.35894805e-01 1.51947168e+00 1.24971436e+00 6.22114738e-01
       1.03612489e+00 2.20484314e-01 1.21780695e+00]
    ''',
    '''
      [3.65737280e-01 3.39217620e-01 3.63507550e-01 3.97609946e-01
       3.66260712e-01 3.60442844e-01 3.71043134e-01 3.79597377e-01
       3.38739178e-01 3.62065149e-01 3.62732485e-01]
    ''',
  )
# ---
# name: test_mahal_class_thresh
  tuple(
    '[0 3 1 0 3 0 3 3 2 3 1]',
    '''
      [1.75667518e+00 9.53244312e-01 8.38840249e-01 1.61368041e+00
       3.35894805e-01 1.51947168e+00 1.24971436e+00 6.22114738e-01
       1.03612489e+00 2.20484314e-01 1.21780695e+00]
    ''',
    '''
      [3.65737280e-01 3.39217620e-01 3.63507550e-01 3.97609946e-01
       3.66260712e-01 3.60442844e-01 3.71043134e-01 3.79597377e-01
       3.38739178e-01 3.62065149e-01 3.62732485e-01]
    ''',
  )
# ---
